# python-scan-4x4

./: .gitignore  NAPS2_VS_PYTHON.md  README.md  SMART_SPLIT.md  app.py  create_test_scan.py  main.py  poc_scan.py  poc_split.py  pyproject.toml  scan_and_split.py  scan_escl.py  scan_with_command.py  simulate_scan.py  smart_split.py  smart_split_old.py  start_web.sh  test_apple_scanner.py  test_escl.py  test_flatbed.py  test_flatbed2.py  test_minimal_scan.py  test_scanner_options.py  test_smart_split.py  test_source_selection.py  troubleshoot_scanner.py
docs/: CHANGELOG.md  FLATBED_FEATURE.md  IMAGE_SPLITTING_GUIDE.md  INSTALL.md  POC_GUIDE.md  PROJECT_PLAN.md  PYTHON_SANE_INSTALL.md  README.md  README_WEB.md  REFACTORING.md  SCANNER_DRIVERS.md  SMART_SPLIT.md  SUMMARY.md  WEB_APP_DESIGN.md  WEB_INTERFACE.md
scanners/: __init__.py  base.py  escl_driver.py  manager.py  sane_driver.py  simulation_driver.py  wia_driver.py
static/css/: style.css
static/js/: app.js
templates/: index.html
